crates/flowlog-build/tests/errors/parser/type_decl_duplicate.dl
.type X = number
.type X <: number
.decl R(x: X)
R(1).
